Add code formatters: Spotless (google-java-format) for Java, Prettier for TypeScript